substrate/frame/support/test/tests/pallet_ui/storage_value_unexpected_named_generic.stderr
error: Invalid pallet::storage, Unexpected generic `P` for `StorageValue`. `StorageValue` expect generics `Value`, and optional generics `QueryKind`, `OnEmpty`.
  --> tests/pallet_ui/storage_value_unexpected_named_generic.rs:36:29
   |
36 |     type Foo<T> = StorageValue<P = u32>;
   |                                ^

error: Invalid pallet::storage, cannot find `Value` generic, required for `StorageValue`.
  --> tests/pallet_ui/storage_value_unexpected_named_generic.rs:36:28
   |
36 |     type Foo<T> = StorageValue<P = u32>;
   |                               ^
